--- a/SC/package.json
+++ b/SC/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PSC",
+  "name": "SymptomChecker",
   "version": "1.0.0",
   "description": "Get started example for Messenger Platform",
   "main": "server.js",
