1) Added extra case statements for different casing. 2) Added extra logging to console when SendAPI is called. 3) Changed Web.Config to match Azure config & logging

--- a/SC/Web.config
+++ b/SC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    
+
     <!--
     <add key="StorageAccountName" value="" />
     <add key="StorageAccountKey" value="" />
@@ -19,17 +19,17 @@
     <staticContent>
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
-    
+
     <modules runAllManagedModulesForAllRequests="false" />
 
     <!-- Web.Debug.config adds attributes to this to enable remote debugging when publishing in Debug configuration. -->
-    <iisnode watchedFiles="web.config;*.js"/>
+    <!--<iisnode watchedFiles="web.config;*.js"/>-->
 
     <!-- Remote debugging (Azure Website with git deploy): Comment out iisnode above, and uncomment iisnode below. -->
-    <!--<iisnode watchedFiles="web.config;*.js"
+    <iisnode watchedFiles="web.config;*.js"
       loggingEnabled="true"
       devErrorsEnabled="true"
-      nodeProcessCommandLine="node.exe &#45;&#45;debug"/>-->
+      nodeProcessCommandLine="node.exe &#45;&#45;debug"/>
 
     <!-- indicates that the server.js file is a Node.js application 
     to be handled by the iisnode module -->
@@ -38,16 +38,16 @@
 
       <!-- Remote debugging (Azure Website with git deploy): Uncomment NtvsDebugProxy handler below.
       Additionally copy Microsoft.NodejsTools.WebRole to 'bin' from the Remote Debug Proxy folder.-->
-      <!--<add name="NtvsDebugProxy" path="ntvs-debug-proxy/a977aeec-a065-4d8d-b452-c313f8fb12a7" verb="*" resourceType="Unspecified"
-        type="Microsoft.NodejsTools.Debugger.WebSocketProxy, Microsoft.NodejsTools.WebRole"/>-->
+      <add name="NtvsDebugProxy" path="ntvs-debug-proxy/a977aeec-a065-4d8d-b452-c313f8fb12a7" verb="*" resourceType="Unspecified"
+        type="Microsoft.NodejsTools.Debugger.WebSocketProxy, Microsoft.NodejsTools.WebRole"/>
     </handlers>
     <rewrite>
       <rules>
         <clear />
         <!-- Remote debugging (Azure Website with git deploy): Uncomment the NtvsDebugProxy rule below. -->
-        <!--<rule name="NtvsDebugProxy" enabled="true" stopProcessing="true">
+        <rule name="NtvsDebugProxy" enabled="true" stopProcessing="true">
           <match url="^ntvs-debug-proxy/.*"/>
-        </rule>-->
+        </rule>
         <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="iisnode.+" negate="true" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
@@ -56,10 +56,10 @@
       </rules>
     </rewrite>
   </system.webServer>
-  
+
   <!-- Remote debugging (Azure Website with git deploy): uncomment system.web below -->
-  <!--<system.web>
+  <system.web>
     <httpRuntime targetFramework="4.5"/>
     <customErrors mode="Off"/>
-  </system.web>-->
+  </system.web>
 </configuration>
